# libtor-sys

./: .gitignore  .travis.yml  CROSS_COMPILING.md  Cargo.toml  README.md  UPGRADE.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yaml
buildutils/: Cargo.toml
buildutils/src/: lib.rs
configs/aarch64-linux-android/: orconfig.h
configs/aarch64-linux-android/event2/: event-config.h
configs/x86_64-unknown-linux-gnu/: orconfig.h
configs/x86_64-unknown-linux-gnu/event2/: event-config.h
fake-stdio/: stdio.c
libevent-2.1.11-stable/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
libevent-src/: Makefile.am  Makefile.in  aclocal.m4
libevent-src/autom4te.cache/: output.0  requests  traces.0  traces.1
libevent-sys/: Cargo.toml  build.rs
libevent-sys/libevent-2.1.11-stable/: Makefile.am  Makefile.in  configure
libevent-sys/libevent-2.1.11-stable/autom4te.cache/: output.2  requests
libtor-src/: Cargo.toml  README.md  UPGRADE.md  build.rs
libtor-src/patches/: libevent-0001-libevent-makefile.patch  tor-0007-disable-tools.patch  tor-0008-exclude-unused-file.patch  tor-0009-remove-symdef-sorted-libs.patch
libtor-src/src/: lib.rs
patches/: 0001-linux-fix-openssl.patch  0003-android-fake-stdio.patch  libevent-0001-libevent-makefile.patch  tor-0002-skip-tor-gencert.patch  tor-0004-ignore-libcap.patch  tor-0005-mingw32-find-libevent-libs.patch  tor-0006-include-openssl-engine.patch  tor-0007-disable-tools.patch
src/: lib.rs
tor-src/: Makefile.in  configure  configure.ac  orconfig.h.in  orconfig.h.in~
tor-src/src/: include.am
tor-src/src/core/proto/: include.am
tor-src/src/lib/crypt_ops/: crypto_openssl_mgt.h
tor-tor-0.4.2.6/: .gitignore  Makefile.in  configure  configure.ac
tor-tor-0.4.2.6/src/tools/: include.am
tor-tor-0.4.2.7/: configure.ac
