[package]
name = "libtor-sys"
version = "46.7.1+0.4.6.7"
authors = ["Alekos Filini <alekos.filini@gmail.com>"]
license = "MIT"
homepage = "https://github.com/MagicalBitcoin/libtor-sys"
repository = "https://github.com/MagicalBitcoin/libtor-sys"
documentation = "https://docs.rs/libtor-sys/"
description = "Rust crate that internally compiles Tor and its dependencies"
keywords = ["tor", "daemon"]
readme = "README.md"
exclude = [
    "patches",
    "tor-src/ChangeLog",
    "tor-src/ReleaseNotes",
]

build = "build.rs"
links = "tor"

[dependencies]
openssl-sys = "0.9"
libz-sys = { version = "~1.1.3", features = ["static"] }
lzma-sys = { version = "0.1", optional = true }
zstd-sys = { version = "1.6", optional = true }

[build-dependencies]
cc = "1.0"
autotools = "^0.2.2"
fs_extra = "1.1"

[lib]
name = "tor_sys"
path = "src/lib.rs"

[features]
vendored-openssl = ["openssl-sys/vendored"]
vendored-lzma = ["lzma-sys", "lzma-sys/static", "with-lzma"]
vendored-zstd = ["zstd-sys", "with-zstd"]
with-lzma = []
with-zstd = []
